<resources>
    <string name="app_name">Android Experiment</string>

    <string name="title_activity_modern_feed">Modern Feed</string>
    <string name="title_activity_recyclerview">RecyclerViewActivity</string>
    <string name="title_activity_constraintlayout_in_recyclerview">ConstraintLayout in RecyclerView</string>

    <string name="menu_modern_feed">Modern Feed</string>
    <string name="menu_recyclerview">RecyclerView</string>
    <string name="menu_constraintlayout_in_recyclerview">ConstraintLayout in RecyclerView</string>
    <string name="menu_structsandalgos">Structs And Algos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Structs and Algos -->
    <string name="structs_and_algos_stack_input_hint">Enter value for Stack</string>

</resources>
