<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_recycleview"
        android:title="@string/menu_recyclerview" />

    <item
        android:id="@+id/menu_modern_feed"
        android:title="@string/menu_modern_feed" />

    <item
        android:id="@+id/menu_constraintlayout_in_recyclerview"
        android:title="@string/menu_constraintlayout_in_recyclerview" />

    <item
        android:id="@+id/menu_structsandalgos"
        android:title="@string/menu_structsandalgos" />

</menu>
